# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "iceoryx2",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@//iceoryx2-bb/container:iceoryx2-bb-container",
        "@//iceoryx2-bb/elementary:iceoryx2-bb-elementary",
        "@//iceoryx2-bb/lock-free:iceoryx2-bb-lock-free",
        "@//iceoryx2-bb/log:iceoryx2-bb-log",
        "@//iceoryx2-bb/memory:iceoryx2-bb-memory",
        "@//iceoryx2-bb/posix:iceoryx2-bb-posix",
        "@//iceoryx2-bb/system-types:iceoryx2-bb-system-types",
        "@//iceoryx2-cal:iceoryx2-cal",
        "@//iceoryx2-pal/concurrency-sync:iceoryx2-pal-concurrency-sync",
        "@crate_index//:cdr",
        "@crate_index//:lazy_static",
        "@crate_index//:serde",
        "@crate_index//:sha1_smol",
        "@crate_index//:tiny-fn",
        "@crate_index//:toml",
    ],
    proc_macro_deps = [
        "@//iceoryx2-bb/derive-macros:iceoryx2-bb-derive-macros",
    ],
)

# TODO: [349] add feature flags
# TODO: [349] add tests
