[package]
name = "iceoryx2"
description = "iceoryx2: Lock-Free Zero-Copy Interprocess Communication"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "../README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
default = ["std"]
std = [
  "logger_buffer",
  "logger_console",
  "logger_file",
  "iceoryx2-cal/std",
  "iceoryx2-bb-posix/std",
  "iceoryx2-bb-log/std",
  "iceoryx2-pal-concurrency-sync/std",
]

# Enables logging to console
logger_console = ["iceoryx2-bb-log/logger_console"]
# Enables logging to buffer
logger_buffer = ["iceoryx2-bb-log/logger_buffer"]
# Enables logging to file
logger_file = ["iceoryx2-bb-log/logger_file"]
# Enables https://crates.io/crates/log as default logger
logger_log = [
  "iceoryx2-bb-log/logger_log"
]
# Enables https://crates.io/crates/tracing as default logger
logger_tracing = [
  "iceoryx2-bb-log/logger_tracing"
]

# The permissions of all resources will be set to read, write, execute for everyone.
# This shall not be used in production and is meant to be enabled in a docker environment
# with inconsistent user configuration.
dev_permissions = ["iceoryx2-cal/dev_permissions"]
# Use https://crates.io/crates/libc for the platform abstraction. This simplifies
# cross-compilation since bindgen is not required anymore. Unfortunately, the libc crate
# does not offer all the functionality iceoryx2 requires on all of the supported
# platforms. Therefore, only a subset of the supported platforms will work with this
# feature flag.
libc_platform = ["iceoryx2-bb-posix/libc_platform"]

# Uses a custom configuration file for the iceoryx2 platform abstraction layer
# The location of the config can be set via environment variable
# `IOX2_CUSTOM_PAL_CONFIG_PATH`.
custom_pal_config = ["iceoryx2-pal-configuration/custom_pal_config"]

# Uses a custom POSIX abstraction for the iceoryx2 platform abstraction layer
# The location of posix abstraction can be set via environment variable
# `IOX2_CUSTOM_PAL_POSIX_PATH`.
custom_pal_posix = ["iceoryx2-pal-posix/custom_pal_posix"]

[dependencies]
iceoryx2-bb-container = { workspace = true }
iceoryx2-bb-derive-macros = { workspace = true }
iceoryx2-bb-system-types = { workspace = true }
iceoryx2-bb-lock-free = { workspace = true }
iceoryx2-bb-log = { workspace = true }
iceoryx2-bb-memory = { workspace = true }
iceoryx2-bb-posix = { workspace = true }
iceoryx2-bb-elementary = { workspace = true }
iceoryx2-bb-elementary-traits = { workspace = true }
iceoryx2-cal = { workspace = true }
iceoryx2-pal-concurrency-sync = { workspace = true }
iceoryx2-pal-configuration = { workspace = true }
iceoryx2-pal-posix = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
tiny-fn = { workspace = true }

[dev-dependencies]
iceoryx2-bb-testing = { workspace = true }
iceoryx2-pal-testing = { workspace = true }
