[package]
name = "iceoryx2"
description = "iceoryx2: Lock-Free Zero-Copy Interprocess Communication"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "../README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
default = ["std"]
std = [
  "iceoryx2-log/std",
  "iceoryx2-cal/std",
  "iceoryx2-bb-loggers/std",
  "iceoryx2-bb-loggers/console",
  "iceoryx2-bb-concurrency/std",
  "iceoryx2-bb-container/std",
  "iceoryx2-bb-elementary/std",
  "iceoryx2-bb-derive-macros/std",  
  "iceoryx2-bb-memory/std",
  "iceoryx2-bb-lock-free/std",
  "iceoryx2-bb-system-types/std",
  "iceoryx2-bb-posix/std",
  "iceoryx2-bb-print/std",
]

# The permissions of all resources will be set to read, write, execute for everyone.
# This shall not be used in production and is meant to be enabled in a docker environment
# with inconsistent user configuration.
dev_permissions = ["iceoryx2-cal/dev_permissions"]

[dependencies]
iceoryx2-log = { workspace = true }
iceoryx2-cal = { workspace = true }
iceoryx2-bb-print = { workspace = true }
iceoryx2-bb-loggers = { workspace = true }
iceoryx2-bb-concurrency = { workspace = true }
iceoryx2-bb-container = { workspace = true }
iceoryx2-bb-derive-macros = { workspace = true }
iceoryx2-bb-system-types = { workspace = true }
iceoryx2-bb-lock-free = { workspace = true }
iceoryx2-bb-memory = { workspace = true }
iceoryx2-bb-posix = { workspace = true }
iceoryx2-bb-elementary = { workspace = true }
iceoryx2-bb-elementary-traits = { workspace = true }
iceoryx2-pal-configuration = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
tiny-fn = { workspace = true }

[dev-dependencies]
iceoryx2-tests-common = { workspace = true, features = ["std"] }
iceoryx2-bb-loggers = { workspace = true, features = ["std"] }
iceoryx2-bb-testing = { workspace = true, features = ["std"] }

[[test]]
name = "tests"
harness = false
