[workspace]
resolver = "2"
members = [
    "zenoh/tunnel-backend",
    "zenoh/tunnel-cli",
]

[workspace.package]
categories = ["network-programming"]
description = "iceoryx2 integrations with external middleware"
edition = "2024"
homepage = "https://iceoryx.io"
keywords = [
    "zero-copy",
    "communication",
    "ipc",
    "publish-subscribe",
    "request-response",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/eclipse-iceoryx/iceoryx2"
rust-version = "1.85"
version = "0.8.999"

[workspace.dependencies]
iceoryx2-integrations-zenoh-tunnel-cli = { version = "0.8.999", path = "zenoh/tunnel-cli" }
iceoryx2-integrations-zenoh-tunnel-backend = { version = "0.8.999", path = "zenoh/tunnel-backend" }

iceoryx2 = { version = "0.8.999", path = "../iceoryx2/" }
iceoryx2-log = { version = "0.8.999", path = "../iceoryx2-log/log/" }
iceoryx2-bb-concurrency = { version = "0.8.999", path = "../iceoryx2-bb/concurrency/" }
iceoryx2-bb-posix = { version = "0.8.999", path = "../iceoryx2-bb/posix/" }
iceoryx2-bb-testing = { version = "0.8.999", path = "../iceoryx2-bb/testing/" }
iceoryx2-bb-testing-macros = { version = "0.8.999", path = "../iceoryx2-bb/testing-macros/" }
iceoryx2-services-tunnel = { version = "0.8.999", path = "../iceoryx2-services/tunnel" }
iceoryx2-services-tunnel-backend = { version = "0.8.999", path = "../iceoryx2-services/tunnel-backend" }
iceoryx2-services-tunnel-conformance-tests = { version = "0.8.999", path = "../iceoryx2-services/tunnel-conformance-tests" }

anyhow = { version = "1.0.86" }
better-panic = { version = "0.3.0" }
clap = { version = "4.5.4", features = ["derive"] }
human-panic = { version = "=2.0.2" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
zenoh = { version = "1.7.2", features = ["default", "unstable"] }
