[package]
name = "iceoryx2-benchmarks-dmabuf"
description = "Benchmarks for the iceoryx2-dmabuf service variant"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[[bin]]
name = "iceoryx2-benchmarks-dmabuf"
path = "src/main.rs"

[dependencies]
iceoryx2 = { workspace = true }
iceoryx2-dmabuf = { workspace = true, features = ["dma-buf"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
dma-heap = "0.3"
