[package]
name = "benchmark_publish_subscribe"
description = "Iceoryx2: benchmark for publish-subscribe messaging pattern"
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
iceoryx2_bb_log = { workspace = true }
iceoryx2 = { workspace = true }
iceoryx2_bb_posix = { workspace = true }
iceoryx2_bb_container = { workspace = true }
