[package]
name = "benchmark-queue"
description = "iceoryx2: [internal] benchmark for the internal queues"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
iceoryx2-bb-lock-free = { workspace = true }
iceoryx2-bb-posix = { workspace = true }

clap = { workspace = true }
